fixed Sales Market Identifier flounderDropdown to be expand/collapse

--- a/src/FlounderDropdown/flounderDropdown.css
+++ b/src/FlounderDropdown/flounderDropdown.css
@@ -25,6 +25,13 @@
         display:            flex;
         align-items:        center;
 
+        .selectedDisplayed
+        {
+            height: 40px;
+            display: flex;
+            align-items: center;
+        }
+
         &:focus
         {
             outline:    none;
